<resources>
    <string name="app_name">Movie Explorer</string>
    <string name="movie_details_frag_search_in"><u>Search in</u></string>
    <string name="movie_details_frag_rate">Rate!</string>
    <string name="movie_details_frag_rate_this_movie">Rate this Movie</string>
    <string name="movie_details_frag_you_rated_movie">You Rated this Movie</string>
    <string name="movie_details_frag_total_votes">Total Votes:</string>
    <string name="movie_details_frag_popularity">Popularity:</string>
    <string name="movie_details_frag_language">Language:</string>
    <string name="header_view_all_movies_title">Now in Cinema</string>
    <string name="header_view_rated_movies_title">Rated by You</string>
    <string name="movie_details_frag_public_rating">Public Rating:</string>
    <string name="movie_details_frag_adult_film">Adult Film</string>
    <string name="video_item_swipe_for_more">Swipe for more</string>
    <string name="movie_list_frag_no_rated_movies_yet">No Rated Movies Yet!\nPlease go rate some movies\nand come back later!</string>
    <string name="movie_list_frag_read_more"><u>more</u></string>
    <string name="movie_list_frag_read_less"><u>less</u></string>
    <string name="nav_menu_search">Search</string>
    <string name="nav_menu_most_rated_movies">Top Rated</string>
    <string name="nav_menu_upcoming_movies">Upcoming</string>
    <string name="nav_menu_popular_movies">Popular</string>
    <string name="nav_menu_share_this_app">Share this app</string>
    <string name="nav_menu_share_this_app_text">You have to try this new movies app!\n</string>
    <string name="movie_details_frag_share_movie">Share this movie with a friend</string>
    <string name="movie_details_frag_share_movie_text">Let\'s go see this movie \n</string>
    <string name="search_frag_no_results">No Results for</string>
    <string name="rate_this_app">Rate this App</string>
    <string name="more_cool_apps">More Cool Apps</string>
    <string name="error_connection_failed">Connection to server failed</string>
    <string name="error_auth_fail">Authentication with server failed</string>
    <string name="error_fetch_langs_fail">Couldn\'t load languages from server</string>
    <string name="error_fetch_genres_fail">Couldn\'t load genres from server</string>
    <string name="error_fetching_movies_fail">Error Fetching Movies</string>
    <string name="links">Links</string>
</resources>
